# fastapi-bookstore-api

./: .editorconfig  .env.example  .gitignore  README.md  cspell.config.yaml  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json  docker-compose.yml
alembic/: env.py
alembic/versions/: 786ccdd5251a_.py
bookstore/: main.py  models.py  utils.py
bookstore/api/: main.py
bookstore/api/routers/: author.py  book.py  publisher.py
bookstore/core/: config.py  database.py  deps.py
bookstore/enums/: author_related.py
bookstore/schemas/: author.py  book.py  publisher.py
tests/: conftest.py  test_main.py
